# claude-agent

./: .gitignore  Cargo.toml  LICENSE  README.md  plan.md
.swissarmyhammer/issues/: 01K6QNWT0KBMFTM7K9G4Z0N09T.md  01K6QNWXR30MD2162FDPKMGYBF.md  01K6QNX1BDNWEBYJFJ45X6MPRK.md  01K6QNX8ZS130XKAYAPCBECTE4.md  01K6QNXCP6Q9YKZSXJBANJDERG.md  01K6QNXG43QRNWHZJR6J96EN08.md  01K6QNXKKCFZH8410CYF75HR0K.md  01K6QNXPXQAGXJJ6SCK4MHM3P1.md  01K6QNXYYTBEFPBA7YMRDMSBJD.md  01K6QNY2B98EBQA28A2XSX6C4D.md  01K6QNY7GJ3PQ2FDPKSG871PWP.md  01K6QP240BY0AJ6RVR3RSCMRMC.md  01K6QP407QSS0V34XBX4675TG9.md  02-protocol-translator.md  03-integrate-with-agent.md  04-remove-sdk-dependency.md  PLAN_000001_project_structure.md  PLAN_000002_error_config_types.md  PLAN_000003_claude_client_wrapper.md  PLAN_000004_session_management.md  PLAN_000005_agent_trait_basic.md  PLAN_000006_agent_trait_prompting.md  PLAN_000007_tool_call_foundation.md  PLAN_000008_streaming_responses.md  PLAN_000009_server_implementation.md  PLAN_000010_tool_call_execution.md  PLAN_000011_cli_implementation.md  PLAN_000012_protocol_compliance.md  PLAN_000013_integration_testing.md  PLAN_000014_mcp_server_integration.md  PLAN_000015_security_hardening.md  PLAN_000016_documentation_examples.md  acp-implement-max-turn-requests-stop-reason.md  acp-verify-tool-call-status-updates.md  acp_json_field_casing_variance.md  complete-agent-capabilities-response.md  consolidate-base64-validation.md  consolidate-empty-validation.md  consolidate-error-types.md  consolidate-path-traversal-detection.md  (+66 more)
.swissarmyhammer/issues/complete/: 01-claude-process-manager.md  01K65FJQJ6BCR0KJH2H47V26KV.md  01K6QNWT0KBMFTM7K9G4Z0N09T.md  01K6QNWXR30MD2162FDPKMGYBF.md  01K6QNX1BDNWEBYJFJ45X6MPRK.md  01K6QNX8ZS130XKAYAPCBECTE4.md  01K6QNXCP6Q9YKZSXJBANJDERG.md  01K6QNXG43QRNWHZJR6J96EN08.md  01K6QNXKKCFZH8410CYF75HR0K.md  01K6QNXYYTBEFPBA7YMRDMSBJD.md  01K6QNY2B98EBQA28A2XSX6C4D.md  01K6QNY7GJ3PQ2FDPKSG871PWP.md  01K6QP240BY0AJ6RVR3RSCMRMC.md  01K6QP407QSS0V34XBX4675TG9.md  02-protocol-translator.md  03-integrate-with-agent.md  04-remove-sdk-dependency.md  PLAN_000001_project_structure.md  PLAN_000002_error_config_types.md  PLAN_000003_claude_client_wrapper.md  PLAN_000004_session_management.md  PLAN_000005_agent_trait_basic.md  PLAN_000006_agent_trait_prompting.md  PLAN_000007_tool_call_foundation.md  PLAN_000008_streaming_responses.md  PLAN_000009_server_implementation.md  PLAN_000010_tool_call_execution.md  PLAN_000011_cli_implementation.md  PLAN_000012_protocol_compliance.md  PLAN_000013_integration_testing.md  PLAN_000014_mcp_server_integration.md  acp-implement-max-tokens-stop-reason.md  acp-implement-max-turn-requests-stop-reason.md  acp_json_field_casing_variance.md  add-mcp-server-validation.md  complete-agent-capabilities-response.md  complete-mcp-server-configuration-support.md  consolidate-base64-validation.md  consolidate-empty-validation.md  (+69 more)
.swissarmyhammer/memos/: ACP_Protocol_Compliance_Review_-_Prompt_Turn.md  Claude_CLI_Stream-JSON_Format_Documentation.md  Complete_ACP_Protocol_Compliance_Audit.md  Content_Processing_Timeout_Anti-Pattern.md  Testing_Philosophy_-_Real_API_Calls_Are_OK.md
.swissarmyhammer/todo/: todo.yaml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: acp_error_conversion.rs  agent.rs  base64_processor.rs  base64_validation.rs  capability_validation.rs  claude.rs  claude_process.rs  config.rs  content_block_processor.rs  content_capability_validator.rs  content_security_integration_tests.rs  content_security_validator.rs  conversation_manager.rs  editor_state.rs  error.rs  lib.rs  mcp.rs  mcp_error_handling.rs  mime_type_validator.rs  path_validator.rs  permission_interaction_tests.rs  permissions.rs  plan.rs  protocol_translator.rs  request_validation.rs  server.rs  session.rs  session_errors.rs  session_loading.rs  session_validation.rs  size_validator.rs  terminal_manager.rs  tool_call_lifecycle_tests.rs  tool_classification.rs  tool_types.rs  tools.rs  url_validation.rs  user_prompt.rs  validation_utils.rs
lib/src/tests/: mod.rs
lib/tests/: integration_tests.rs  test_immediate_response.rs  test_message_duplication.rs  test_session_continuity.rs
lib/tests/common/: content_blocks.rs  fixtures.rs  handler_utils.rs  mod.rs  test_data.rs
tests/: e2e_tests.rs  test_client.rs
tests/common/: mod.rs
