[workspace]
members = ["lib", "cli"]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Agent protocol
agent-client-protocol = "0.4.3"
claude-sdk-rs = { version = "1.0.1", features = ["full"] }
async-trait = "0.1"
ulid = { version = "1.1", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }