[package]
name = "claude-agent-lib"
version = "0.1.0"
edition = "2021"
description = "Core ACP server implementation for Claude Agent"
authors = ["Claude Agent"]
license = "MIT"

[dependencies]
agent-client-protocol = { workspace = true }
claude-sdk-rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"