[package]
name = "claude-agent-lib"
version = "0.1.0"
edition = "2021"
description = "Core ACP server implementation for Claude Agent"
authors = ["Claude Agent"]
license = "MIT"

[dependencies]
agent-client-protocol = { workspace = true }
claude-sdk-rs = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
regex = "1.10"
url = "2.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
futures = { workspace = true }
uuid = "1.10"